set fixed text size

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --text: clamp(0.7813rem, 0.7736rem + 0.0341vw, 0.8rem);
+  --text: 0.875rem;
   --bg-color: #1c1b1a;
   --ui-color: #343331;
   --text-color: #cecdc3;
