--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
   --ui-color: #343331;
   --text-color: #cecdc3;
   --text-color-faint: #878580;
+  --spacing-xs: 0.25rem;
+  --spacing-sm: 0.5rem;
+  --spacing-md: 1rem;
 }
 
 * {
@@ -29,6 +32,11 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  gap: var(--spacing-sm);
+}
+
+li {
+  margin-bottom: var(--spacing-xs);
 }
 
 .container {
@@ -36,7 +44,7 @@ body {
   padding-top: 8px;
   display: flex;
   max-width: 60em;
-  gap: 0.8em;
+  gap: var(--spacing-md);
   flex-grow: 1;
   .title {
     flex: 0 0 37.5%;
