--- a/style.css
+++ b/style.css
@@ -14,25 +14,27 @@
   --spacing-xs: 0.25rem;
   --spacing-sm: 0.5rem;
   --spacing-md: 1rem;
+  --spacing-xl: 2rem;
 }
 
 * {
   margin: 0;
   padding: 0;
+  font-family: "ABC Diatype Semi-Mono", sans-serif;
+  font-size: var(--text);
+  font-weight: normal;
 }
 
 body {
   padding: 40px;
   padding-top: 8px;
-
-  font-family: "ABC Diatype Semi-Mono", sans-serif;
-  font-size: var(--text);
   background: var(--bg-color);
   color: var(--text-color);
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: var(--spacing-sm);
+  max-width: 60em;
 }
 
 li {
@@ -43,7 +45,6 @@ li {
   border-top: solid 1px var(--ui-color);
   padding-top: 8px;
   display: flex;
-  max-width: 60em;
   gap: var(--spacing-md);
   flex-grow: 1;
   .title {
@@ -75,6 +76,47 @@ li {
     height: auto;
     display: block;
   }
+}
+
+.header {
+  margin-top: 8px;
+  margin-bottom: 16px;
+  display: flex;
+  width: 100%;
+
+  aside {
+    color: var(--text-color-faint);
+  }
+
+  .about-row {
+    margin-bottom: var(--spacing-sm);
+    display: flex;
+    gap: 0;
+  }
+
+  :nth-child(2) {
+    margin-left: var(--spacing-md);
+  }
+
+  :nth-child(4) {
+    margin-left: var(--spacing-xl);
+  }
+}
+
+.header .about-label {
+  flex-shrink: 0;
+  white-space: nowrap;
+}
+
+.header .about-text {
+  flex: 1;
+}
+
+.header .about-list {
+  flex: 1;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
